[degree] add degree analysis

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-csv
 nohup.out
 __pycache__
 controller/__pycache__
@@ -6,4 +5,8 @@ GFVis/__pycache__
 static/json
 controller/__pycache__
 static/image/svg
+# 忽略csv目录下的所有文件，但不忽略这三个特定的文件
+csv/*
 !csv/version.csv
+!csv/award_authors.csv
+!csv/award_list.csv
