--- a/static/json/config.json
+++ b/static/json/config.json
@@ -1,14 +1,30 @@
 {
-    "acl": {
-        "remove_survey": true,
-        "remove_isolated": true,
-        "node_prob": 0.5,
-        "edge_prob": 0.4
-    },
     "default": {
         "remove_survey": true,
         "remove_isolated": true,
         "node_prob": 0.5,
         "edge_prob": 0.5
+    },
+    "acl": {
+        "edge_prob": 0.4,
+        "name": "NLP",
+        "icon": "fa-solid fa-pencil icon"
+    },
+    "CG": {
+        "name": "Graphics",
+        "icon": "fa-brands fa-codepen icon"
+    },
+    "database": {
+        "name": "Database & Data Science",
+        "icon": "fa-solid fa-database icon"
+    },
+    "visualization": {
+        "name": "Visualization",
+        "icon": "fas fa-eye icon"
+    },
+    "fellow": {
+        "name": "ACM Fellows",
+        "icon": "fas fa-user-graduate icon"
     }
 }
+
