--- a/static/config.json
+++ b/static/config.json
@@ -40,7 +40,7 @@
         "icon": "fas fa-user-graduate icon",
         "description": "Fellows of the ACM and their competitors (similar #paper and #citation)"
     },
-    "turing": {
+    "fellowTuring": {
         "name": "Turing Award",
         "icon": "fa-solid fa-trophy icon"
     },
